syntax = "proto3";

package sc.internal.services.ledger.v1;

import "protoc-gen-openapiv2/options/annotations.proto";
import "google/api/annotations.proto";
import "sc/external/services/ledger/v1/types.proto";
import "sc/external/common/api/v1/pagination.proto";
import "sc/external/common/api/v1/query.proto";

service LedgerService {
  rpc Create ( CreateRequest ) returns ( CreateResponse );
  rpc Destroy ( DestroyRequest ) returns ( DestroyResponse );
  rpc Query ( QueryRequest ) returns ( QueryResponse );
  rpc GetFunds ( GetFundsRequest ) returns ( GetFundsResponse );
  rpc Deposit ( DepositRequest ) returns ( DepositResponse );
  rpc Withdraw ( WithdrawRequest ) returns ( WithdrawResponse );
  rpc Transfer ( TransferRequest ) returns ( TransferResponse );
  rpc Copy ( CopyRequest ) returns ( CopyResponse );
  rpc QueryHistory ( QueryHistoryRequest ) returns ( QueryHistoryResponse );
}

message CreateRequest {
  repeated CreateLedger ledgers = 1;

  message CreateLedger {
    string owner_urn = 1;
    uint32 account_id = 2;
    string name = 3;
    external.services.ledger.v1.Currency currency = 4;
    string log_message = 5;
    uint64 amount = 6;
  }
}

message CreateResponse {}

message DestroyRequest {
  string id = 1;
  uint32 version = 2;
  string log_message = 3;
}

message DestroyResponse {}

message DepositRequest {
  external.services.ledger.v1.Transaction transaction = 1;
}

message DepositResponse {}

message TransferRequest {
  external.services.ledger.v1.TransferTransaction transaction = 1;
}

message TransferResponse {}

message WithdrawRequest {
  external.services.ledger.v1.Transaction transaction = 1;
}

message WithdrawResponse {}

message CopyRequest {
  string from_owner_urn = 1;
  string to_owner_urn = 2;
}

message CopyResponse {}

message QueryRequest {
  string owner_urn = 1;
}

message QueryResponse {
  repeated external.services.ledger.v1.Ledger ledgers = 1;
}

message GetFundsRequest {
  string owner_urn = 1;
  string ledger_name = 2;
}

message GetFundsResponse {
  repeated external.services.ledger.v1.Ledger ledgers = 1;
}

message QueryHistoryRequest {
  external.common.api.v1.Query query = 4;
}

message QueryHistoryResponse {
  repeated external.services.ledger.v1.LedgerHistory results = 1;
  external.common.api.v1.PaginationInfo page_info = 2;
}

